# Custom-Memory-Allocator

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  alloc.c  alloc.h
tests/: CMakeLists.txt  test_alloc.c
